# LiteGraph

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  test_bpt_graph.cpp  test_graph.cpp  test_simple.cpp  test_templates.cpp
data/: bptgraph.mtx  graph.mtx
include/LightGraph/: graph.h  input.h
include/LiteGraph/: graph.h  input.h
src/: CMakeLists.txt  graph.cpp  input.cpp
